--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "jsdom": "^15.1.1",
     "local-devices": "^2.0.0",
+    "network-list": "^1.1.5",
     "path": "^0.12.7",
     "request": "^2.88.0"
   }
