--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "jsdom": "^15.1.1",
+    "libnmap": "^0.4.16",
     "local-devices": "^2.0.0",
     "network-list": "^1.1.5",
     "path": "^0.12.7",
+    "ping": "^0.2.2",
     "request": "^2.88.0"
   }
 }
